Changelog
=========

7.0-dev - (unreleased)
----------------------

6.9 - (2013-07-08)
------------------
* Bug fix: fixed duplication of auto relations when retriving them from a non
  canonical object
  [ichimdav refs #14831]

6.8 - (2013-06-17)
------------------
* Feature: added ManagementPlanField for content described in the ticket, such
  as IInteractiveData and IInteractiveMap
  [ichimdav #14719]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for EEA Content Types (be aware of previous upgrade
  steps that may require additional manual steps. If you're not sure about this,
  you can always run these steps from ZMI > portal_setup > Upgrades Tab and
  choose Products.EEAContentTypes:default)
  [voineali refs #14675]
* Bug fix: Fix content-rules for GIS Application and other EEA Content-Types
  by adding them to portal_factory
  [voineali refs #14675]
* Bug fix: added a possibility to simplify the schemata_edit form, to not
  include so many items such as a header and type description
  [tiberich #14562]
* Feature: added /download method for Article/Highlight/PressRelease/Promotion and Speech
  to have same API as Image like objects.
  [ghicaale refs #14735]

6.7 - (2013-05-20)
------------------
* Bug fix: fixed ReST merkup under HISTORY.txt
  [ghicaale refs #14554]

6.6 - (2013-05-20)
------------------
* Bug fix: show a visual cue that a wait time might be needed when editing a
  content object in a popup dialog, in the eea.relations popup
  [tiberich #14467]
* Feature: index all subjects/keywords lowercase
  [ghicaale refs #14384]
* Feature: store all subjects/keywords lowercase
  [ghicaale refs #14384]
* Upgrade step:
   - re-save (re-index 'Subject' index) all content types from the portal via a script from /www/0maintenance
   - this operation should be done via www8 instance, using intermediate transaction commits as it will be a very long process