@@ -11,14 +11,10 @@ from archetypes.schemaextender.interfaces import ISchemaModifier
 from eea.geotags import field
 from eea.geotags import widget
 from eea.themecentre.content.ThemeTaggable import ThemesField
-from p4a.subtyper.engine import Subtyper as BaseSubtyper, DescriptorWithName
-from p4a.subtyper.interfaces import IPortalTypedPossibleDescriptors
-from p4a.subtyper.interfaces import IPossibleDescriptors
 from p4a.videoembed.interfaces import IURLChecker
 from p4a.videoembed.interfaces import provider
 from p4a.videoembed.utils import break_url
 from zope.component import adapts
-from zope.component import queryAdapter
 from zope.interface import Interface, implements
 from p4a.video.subtype import TopicVideoContainerDescriptor as \
         BaseTopicVideoContainerDescriptor, _
@@ -373,32 +369,6 @@ class GeotagMultiEdit(GeotagMixinEdit):
     """ Multi Edit
     """
     implements(IGeotagMultiEdit)
-
-class Subtyper(BaseSubtyper):
-    """ We override the default subtyper because of broken logic in its
-        possible_types implementation. The default implementation, due to
-        adapter resolution order, doesn't take into account adapters for
-        IPortalTypedPossibleDescriptors
-
-        Also, not it's possible to hide the menu for content types where
-        it doesn't make sense. This is due to the fact that the subtyper
-        in p4a.video is registered for somewhat generic interfaces
-        (for ex: IATFolder)
-    """
-    _skip = ('Data', 'EEAFigure')
-
-    def possible_types(self, obj):
-        """ Possible types
-        """
-        if obj.portal_type in self._skip:
-            return []
-
-        possible = queryAdapter(obj, IPortalTypedPossibleDescriptors)
-        if possible and possible.possible:
-            return (DescriptorWithName(n, c) for n, c in possible.possible)
-
-        possible = IPossibleDescriptors(obj)
-        return (DescriptorWithName(n, c) for n, c in possible.possible)
 
 class TopicVideoContainerDescriptor(BaseTopicVideoContainerDescriptor):
     """ Topic container
